--- a/platform_android/DuckDerby/app/src/main/res/layout/activity_main.xml
+++ b/platform_android/DuckDerby/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context="yess.duckderby.app.MainActivity">
@@ -8,8 +9,8 @@
         android:layout_height="match_parent">
     <WebView
         android:id="@+id/activity_main_webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
-</RelativeLayout>
+</LinearLayout>
